# android-image-tools

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
completions/bash/: CMakeLists.txt
patches/extras/: 0003-avoid-redefining-O_BINARY-on-Cygwin.patch
